tests/fixtures/invalid/const_pointer_index_write.c
int main() {
    int values[2];
    const int *p = values;
    p[0] = 3;
    return values[0];
}
